# bls_data

./: .gitignore  API_README.md  Makefile  README.md  TODO.md  add_date_column_migration.py  bls_api.py  custom_cpi_extraction.py  extract_all_cpi_us_city_avg.py  extract_cpi_comprehensive.py  mcp_server.py  pyproject.toml  quick_cpi_update.sh  requirements.txt  setup_database.py  start_api.sh  test_api.py  test_cpi_extraction.py  test_date_column.py  test_logging.py  update_cpi_data.sh
bls_logging/: README.md  __init__.py  config.py  formatters.py
cu_series/: cpi_series_master_list.csv  cu_download.py  cu_series_codes.py  download_parse.py
data/: cpi_us_city_avg_2023_2024_20250903_160040.csv
data_extraction/: api_key.py  api_request.py  bls_client.py  code_mapping.csv  data_parser.py  example.py  main.py  mapping_loader.py
database/: __init__.py  config.py  example.py  models.py  repository.py  sync_manager.py  utils.py
scripts/: add_date_column_migration.py  custom_cpi_extraction.py  extract_all_cpi_us_city_avg.py  extract_cpi_comprehensive.py  test_cpi_extraction.py  test_date_column.py  test_logging.py  uv-commands.sh
